unpackaged/main/default/objects/GiftTransaction/fields/Average_Stock_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Stock_Price__c</fullName>
    <description>Manually entered for stock gifts. Captures the average price of the share (i.e. average of &quot;stock price high&quot; and &quot;stock price low&quot; fields). Used for calculating &quot;Stock Receivable&quot; field.</description>
    <inlineHelpText>Manually entered for stock gifts. Captures the average price of the share (i.e. average of &quot;stock price high&quot; and &quot;stock price low&quot; fields). Used for calculating &quot;Stock Receivable&quot; field.</inlineHelpText>
    <label>Average Stock Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>