unpackaged/main/default/objects/GiftTransaction/fields/Cash_Received__c.field-meta.xml
<CustomField>
    <fullName>Cash_Received__c</fullName>
    <description>Actual cash received from a stock donation (= stock receivable +/- gain/loss - commission fee)</description>
    <inlineHelpText>Actual cash received from a stock donation (= stock receivable +/- gain/loss - commission fee)</inlineHelpText>
    <label>Cash Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>