unpackaged/main/default/objects/GiftTransaction/fields/Foreign_Currency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Currency_Amount__c</fullName>
    <label>Foreign Currency Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>