unpackaged/main/default/objects/GiftTransaction/fields/Gain_Loss_on_Stock__c.field-meta.xml
<CustomField>
    <fullName>Gain_Loss_on_Stock__c</fullName>
    <formula>Cash_Received__c - Stock_Receivable__c - Stock_Commission_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For stock gifts. Equals: Stock Receivable - Cash Received - Stock Commission Fee</inlineHelpText>
    <label>Gain (Loss) on Stock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>