unpackaged/main/default/objects/GiftTransaction/fields/Matching_ACK_Date__c.field-meta.xml
<CustomField>
    <fullName>Matching_ACK_Date__c</fullName>
    <label>Matching ACK Date</label>
    <type>Date</type>
</CustomField>