unpackaged/main/default/objects/GiftTransaction/fields/Matching_ACK_Status__c.field-meta.xml
<CustomField>
    <fullName>Matching_ACK_Status__c</fullName>
    <label>Matching ACK Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
            <value>
                <fullName>Do Not Acknowledge</fullName>
            </value>
            <value>
                <fullName>Hold Acknowledgment</fullName>
            </value>
            <value>
                <fullName>To Be Acknowledged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>