unpackaged/main/default/objects/GiftTransaction/fields/Matching_Gift__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matching Gift</label>
    <referenceTo>GiftTransaction</referenceTo>
    <relationshipLabel>Gift Transactions</relationshipLabel>
    <relationshipName>Gift_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>