unpackaged/main/default/objects/GiftTransaction/fields/Matching_Gift_Account__c.field-meta.xml
<CustomField>
    <fullName>Matching_Gift_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matching Gift Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gift Transactions</relationshipLabel>
    <relationshipName>Gift_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>