unpackaged/main/default/objects/GiftTransaction/fields/of_Stock_Shares__c.field-meta.xml
<CustomField>
    <fullName>of_Stock_Shares__c</fullName>
    <description>Used for stock gifts. Captures the number of shares donated</description>
    <inlineHelpText>Enter the number of shares donated by the donor</inlineHelpText>
    <label># of Stock Shares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>