unpackaged/main/default/objects/GiftTransaction/fields/Stock_ACH__c.field-meta.xml
<CustomField>
    <fullName>Stock_ACH__c</fullName>
    <label>Stock ACH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>