unpackaged/main/default/objects/GiftTransaction/fields/Stock_Commission_Fee__c.field-meta.xml
<CustomField>
    <fullName>Stock_Commission_Fee__c</fullName>
    <label>Stock Commission Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>