unpackaged/main/default/objects/GiftTransaction/fields/Stock_Price_Low__c.field-meta.xml
<CustomField>
    <fullName>Stock_Price_Low__c</fullName>
    <label>Stock Price Low</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>