unpackaged/main/default/objects/GiftTransaction/fields/Stock_Receivable__c.field-meta.xml
<CustomField>
    <fullName>Stock_Receivable__c</fullName>
    <description>For stock donations. Average Stock Price * Number of Shares.</description>
    <formula>Average_Stock_Price__c * of_Stock_Shares__c</formula>
    <inlineHelpText>For stock donations. Average Stock Price * Number of Shares.</inlineHelpText>
    <label>Stock Receivable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>