unpackaged/main/default/objects/GiftTransaction/fields/Stock_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Stock_Symbol__c</fullName>
    <label>Stock Symbol</label>
    <length>6</length>
    <type>Text</type>
</CustomField>