unpackaged/main/default/objects/GiftTransaction/fields/Stock_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Stock_Transfer_Date__c</fullName>
    <label>Stock Transfer Date</label>
    <type>Date</type>
</CustomField>