unpackaged/main/default/objects/GiftTransaction/fields/Stock_Type__c.field-meta.xml
<CustomField>
    <fullName>Stock_Type__c</fullName>
    <label>Stock Type</label>
    <type>TextArea</type>
</CustomField>